--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
@@ -223,7 +223,7 @@
                                                     <td mat-cell *matCellDef="let element"> 
                                                         <div>
                                                             <div>{{element.Product.Name}}</div>
-                                                            <div title="Fabricante" class="small-text">{{element.Batch}}</div>
+                                                            <div title="Lote" class="small-text">{{element.Batch}}</div>
                                                         </div>
                                                     </td>
                                                     <td mat-footer-cell *matFooterCellDef> </td>
