--- a/VaccineC/src/app/shared/edit-person-modal/edit-person-dialog.scss
+++ b/VaccineC/src/app/shared/edit-person-modal/edit-person-dialog.scss
@@ -6,7 +6,7 @@
   border-radius: 50%;
 }
 
-.person-pic{
+.person-pic {
   display: flex;
   justify-content: center;
   width: 100px;
@@ -14,7 +14,7 @@
   margin-left: 20px;
 }
 
-.example-full-width{
+.example-full-width {
   margin: 0px;
   width: 100%;
 }
@@ -33,9 +33,26 @@
 }
 
 :host ::ng-deep .mat-dialog-title {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.8rem;
 }
 
 :host ::ng-deep .mat-tab-header {
   margin-bottom: 0.5em !important;
+}
+
+.search-table {
+  margin: 0.1rem;
+}
+
+.search-table-content {
+  padding: 0px;
+}
+
+.add-button {
+  cursor: pointer;
+  font-size: 20px;
+  color: #3d9f3d !important;
+  margin-top: 3px;
+  margin-bottom: 5px;
+  margin-right: 2px;
 }
