--- a/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
+++ b/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
@@ -10,7 +10,7 @@
                         <div class="card-body text-center">
                             <div class="d-flex justify-content-end align-items-center">
                                 <span class="fa-solid fa-user-pen icone-cadastro-paciente" 
-                                      matTooltip="Cadastro da Pessoa"
+                                      matTooltip="Meu Cadastro"
                                       (click)="openEditPersonDialog()" 
                                       matTooltipPosition="above">
                                 </span>
