--- a/VaccineC/src/app/pages/aplicacao/sipni-integration-error-bottom-sheet.html
+++ b/VaccineC/src/app/pages/aplicacao/sipni-integration-error-bottom-sheet.html
@@ -1,3 +1,15 @@
 <mat-nav-list>
-    <p>error</p>
+    
+        <div class="div-row-input">
+            <mat-form-field appearance="fill" class="col-sm-8">
+                <mat-label>Situação</mat-label>
+                <input matInput [(ngModel)]="situation" readonly>
+            </mat-form-field>
+
+            <button mat-flat-button color="primary">
+                <span class="fa-solid fa-wifi me-1 w-20px"></span>
+                Comunicar
+            </button>
+        </div>
+   
 </mat-nav-list>
