--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -187,14 +187,15 @@
 
                   <!-- DATA DE NASCIMENTO -->
                   <mat-form-field appearance="fill" class="col-sm-5 ml-0">
-                    <mat-label>Data de Nascimento</mat-label>
+                    <mat-label>Data {{labelDate}}</mat-label>
                     <input matInput 
                            [matDatepicker]="picker" 
                            #CommemorativeDateInput 
                            [(ngModel)]="CommemorativeDate"
                            formControlName="CommemorativeDate"
+                           (blur)="updateAge()" 
                            [max]="today">
-                           
+                    <mat-hint align="end">{{personAge}}</mat-hint>
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
                   </mat-form-field>
